--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     body {
         background-color: #232F3E;
         }
+    h2 {
+        color: #FF9900;
+        margin: 20px 20px 20px 20px;
+    }
+    textarea {
+        margin: 20px 20px 20px 20px;
+    }
     label, button {
         color: #FF9900;
         font-family: Arial, Helvetica, sans-serif;
@@ -42,15 +49,15 @@
             // make API call with parameters and use promises to get response
             fetch("https://m9xoypuff2.execute-api.eu-north-1.amazonaws.com/development", requestOptions)
             .then(response => response.text())
-            .then(result => alert(JSON.parse(result).body))
+            .then(result => document.getElementById('greets').value += "\n" + JSON.parse(result).body))
             .catch(error => console.log('error', error));
         }
     </script>
 </head>
 
 <body>
-    Hello, your using AWS Amplify to host this via a GitHub Repo!
-
+    <div class="content">
+    <h2> Hello, your using AWS Amplify to host this via a GitHub Repo! </h2>
     <form>
         <label>First Name :</label>
         <input type="text" id="fName">
@@ -59,5 +66,14 @@
         <!-- set button onClick method to call function we defined passing input values as parameters -->
         <button type="button" onclick="callAPI(document.getElementById('fName').value,document.getElementById('lName').value)">Call API</button>
     </form>
+
+    <textarea name="greets" id="greets" rows="4" cols="50" placeholder="Greetings will be displayed here">
+
+    </textarea>
+
+    </div>
+    
+
+
 </body>
 </html>
