--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <form>
         <label>First Name :</label>
         <input type="text" id="firstName">
-        <label>Sir Name :</label>
+        <label>Last Name :</label>
         <input type="text" id="lastName">
         <!-- set button onClick method to call function we defined passing input values as parameters -->
         <button type="button" onclick="greetUserAPI(document.getElementById('firstName').value,document.getElementById('lastName').value)">Call API</button>
